<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/top_rl"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:background="#e74848" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:padding="14dip"
            android:scaleType="fitXY"
            android:src="@drawable/back"
            android:visibility="gone" />

        <!-- 中间title -->

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="18sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" 
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dip"
            android:orientation="vertical"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:singleLine="true"
                    android:hint="@string/phone_number"
                     />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip" >

                <EditText
                    android:id="@+id/pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:hint="@string/password"
                    android:singleLine="true"
                    android:password="true" />
            </RelativeLayout>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/selector_red_blank_btn"
                android:text="@string/login2"
                android:textColor="@color/main_red_color" />

            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/bg_red_btn"
                android:text="@string/register2"
                android:textColor="@android:color/white" />
            <TextView 
                android:id="@+id/reset_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:layout_marginTop="5dip"
                android:textSize="@dimen/normal_text_size"
                android:layout_gravity="right"
                android:text="@string/forget_pwd"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>