<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/top_rl"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:background="#e74848" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:padding="14dip"
            android:scaleType="fitXY"
            android:src="@drawable/back" />

        <!-- 中间title -->

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/device_online_setting"
            android:textColor="#fff"
            android:textSize="18sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/tip_wifi_picker"
                android:textSize="@dimen/large_text_size" />

            <EditText
                android:id="@+id/et_ssid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/tip_wifi_pwd"
                android:textSize="@dimen/large_text_size" />

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:textSize="@dimen/large_text_size" />

            <Button
                android:id="@+id/btn_config"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/selector_red_blank_btn"
                android:text="@string/ok2"
                android:textColor="@color/main_red_color" />

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/bg_red_btn"
                android:text="@string/exit_config"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>